# DataProcessor

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
cmake/: VersionInfo.in  VersionResource.rc  generate_product_version.cmake
src/: CMakeLists.txt
src/addmetadatacommand/: CMakeLists.txt
src/addmetadatacommand/include/AddMetadataCommand/: AddMetadataCommand.hpp
src/addmetadatacommand/src/: AddMetadataCommand.cpp
src/addmetadatacommand/tests/: AddMetadataCommandIT.cpp  AddMetadataCommandTest.cpp  CMakeLists.txt
src/app/: CMakeLists.txt  main.cpp
src/cleanupcommand/: CMakeLists.txt
src/cleanupcommand/include/CleanupCommand/: CleanupCommand.hpp
src/cleanupcommand/src/: CleanupCommand.cpp
src/cleanupcommand/tests/: CMakeLists.txt  CleanupCommandIT.cpp  CleanupCommandTest.cpp  TestRunner.cpp
src/commands/: CMakeLists.txt
src/commands/include/Commands/: Command.hpp  CommandFactory.hpp
src/commands/src/: Command.cpp  CommandFactory.cpp
src/commands/tests/: CMakeLists.txt  CommandFactoryTest.cpp  CommandIT.cpp  CommandMock.h  CommandTest.cpp
src/core/: CMakeLists.txt
src/core/include/Core/: Core.hpp  Message.hpp  MessageQueue.hpp  MessageQueueImpl.hpp
src/core/src/: Core.cpp  Message.cpp  MessageQueueImpl.cpp
src/core/tests/: CMakeLists.txt  MessageQueueTest.cpp  MessageTest.cpp
src/errorcommand/: CMakeLists.txt
src/errorcommand/include/ErrorCommand/: ErrorCommand.hpp
src/errorcommand/src/: ErrorCommand.cpp
src/errorcommand/tests/: CMakeLists.txt  ErrorCommandIT.cpp  ErrorCommandTest.cpp
src/filesysteminput/: CMakeLists.txt
src/filesysteminput/include/FilesystemInput/: FilesystemInput.hpp
src/filesysteminput/src/: FilesystemInput.cpp
src/filesysteminput/tests/: CMakeLists.txt  DirectoryReaderTest.cpp  DirectoryWatcherTest.cpp  FileNotificationTest.cpp  FileReaderImplTest.cpp  FilesystemInputIT.cpp  FilesystemInputTest.cpp  TestRunner.cpp  WinIOApiWrapperMock.hpp  WorkerThreadTest.cpp
src/kafkasendercommand/: CMakeLists.txt
src/kafkasendercommand/include/KafkaSenderCommand/: KafkaSenderCommand.hpp
src/kafkasendercommand/src/: KafkaProducerWrapper.hpp  KafkaProducerWrapperImpl.cpp  KafkaProducerWrapperImpl.hpp  KafkaSenderCommand.cpp
src/kafkasendercommand/tests/: CMakeLists.txt  KafkaProducerWrapperMock.hpp  KafkaSenderCommandIT.cpp  KafkaSenderCommandTest.cpp
src/pipeline/: CMakeLists.txt
src/pipeline/include/Pipeline/: Pipeline.hpp
src/pipeline/src/: Pipeline.cpp  PipelineWorker.cpp  PipelineWorker.hpp
src/pipeline/tests/: CMakeLists.txt  CommandMock.hpp  MessageQueueMock.hpp  PipelineTest.cpp  PipelineWorkerTest.cpp
src/wrapcommand/: CMakeLists.txt
src/wrapcommand/include/WrapCommand/: WrapCommand.hpp
src/wrapcommand/src/: WrapCommand.cpp
src/wrapcommand/tests/: CMakeLists.txt  WrapCommandIT.cpp  WrapCommandTest.cpp
test/: file_0.txt  file_1.txt  file_10.txt  file_11.txt  file_12.txt  file_13.txt  file_14.txt  file_15.txt  file_16.txt  file_17.proc  file_18.txt  file_19.txt  file_2.txt  file_3.txt  file_4.txt  file_5.txt  file_6.txt  file_7.txt  file_8.txt  file_9.txt
